--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
 Requirements for the project:   
 
-python==3.10.12
-numpy==1.24.3
-pandas==2.0.3
-matplotlib==3.7.1
-scipy==1.11.1
-statsmodels==0.14.0
+# Núcleo científico
+numpy>=1.26
+pandas>=2.0
+scipy>=1.10
+
+# Modelado estadístico
+statsmodels>=0.14
+
+# Datos de mercado
+yfinance>=0.2.40
+
+# Visualización
+matplotlib>=3.7
+
+# Utilidades opcionales (seguro instalar)
+tqdm>=4.66
+requests>=2.31
